crates/gridwell-writer-pandoc/tests/snapshots/snapshots__header-only-empty-body.snap
---
source: crates/gridwell-writer-pandoc/tests/snapshots.rs
expression: out
---
{
  "c": [
    [
      "",
      [],
      []
    ],
    [
      null,
      [
        {
          "c": [
            {
              "c": "Empty",
              "t": "Str"
            }
          ],
          "t": "Para"
        }
      ]
    ],
    [
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ],
      [
        {
          "t": "AlignLeft"
        },
        {
          "t": "ColWidthDefault"
        }
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      [
        [
          [
            "",
            [],
            []
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "A",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "B",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ],
            [
              [
                "",
                [],
                []
              ],
              {
                "t": "AlignDefault"
              },
              1,
              1,
              [
                {
                  "c": [
                    {
                      "c": "C",
                      "t": "Str"
                    }
                  ],
                  "t": "Plain"
                }
              ]
            ]
          ]
        ]
      ]
    ],
    [
      [
        [
          "",
          [],
          []
        ],
        0,
        [],
        []
      ]
    ],
    [
      [
        "",
        [],
        []
      ],
      []
    ]
  ],
  "t": "Table"
}
